tests/modules/fail/0003-module-missing-var-xsig.ec
type t.

module I = {
  var x : t
}.

module J = {
  var y : t
}.

module M : I, J = {
  var x : t
}.
